--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           width: 100%;
           height: 100%;
           max-height: 180px; /* Control image height */
-          object-fit: cover;
+          object-fit: contain; /* MODIFIED: was 'cover' */
           border-radius: 8px;
           margin-bottom: 12px;
           flex-shrink: 1; /* Allow image to shrink if needed */
@@ -396,7 +396,7 @@
         margin: 0; /* Make full width */
         box-shadow: 0 -4px 16px rgba(0, 0, 0, 0.35); /* Add shadow */
         flex-shrink: 0; /* Prevent this from shrinking */
-        margin-top: auto; /* UPDATED: This pushes the panel to the bottom of the flex container */
+        /* margin-top: auto; */ /* REMOVED: This was causing the gap */
       }
       .exp-meter {
         flex: 1 1 auto;
@@ -1016,3 +1016,4 @@ V
     </script>
   </body>
 </html>
+
