--- a/index.html
+++ b/index.html
@@ -509,9 +509,9 @@
         border-radius: 999px; /* Round */
         background: radial-gradient(
           circle at 30% 30%,
-          #a855f7,
-          #581c87 95%
-        ); /* Dark Purple Gradient */
+          #7e22ce, /* MODIFIED: Was #a855f7 */
+          #3b0764 95% /* MODIFIED: Was #581c87 */
+        ); /* MUCH Darker Purple Gradient */
         border: 1px solid rgba(255, 255, 255, 0.3);
         box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
         transition: transform 0.05s ease, box-shadow 0.05s ease; /* Same animation timing */
@@ -522,10 +522,35 @@
         box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
       }
 
+      /* NEW: Wrapper for side stats and action button */
+      .action-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        margin-left: auto; /* Push this whole block to the right */
+        padding-right: 8px; /* Align with original button's margin */
+        flex-shrink: 0;
+        align-self: center; /* Vertically center wrapper */
+      }
+      .side-stats-wrap {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+        align-items: center;
+      }
+      .side-stat {
+        color: #fff;
+        font-size: 0.9rem;
+        font-weight: 600;
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+      }
+
       .action-button {
-        margin-left: auto;
-        margin-right: 8px;
-        align-self: center;
+        margin-left: 0; /* MODIFIED: Was auto */
+        margin-right: 0; /* MODIFIED: Was 8px */
+        align-self: initial; /* MODIFIED: Was center */
         width: 78px;
         height: 78px;
         flex-shrink: 0;
@@ -793,11 +818,19 @@
             </div>
             <!-- Panel removed from here -->
           </div>
-          <button
-            class="action-button"
-            type="button"
-            aria-label="Primary Action"
-          ></button>
+
+          <!-- MODIFIED: Wrapped button and added stats -->
+          <div class="action-wrapper">
+            <div class="side-stats-wrap">
+              <div class="side-stat">Attack: 5</div>
+              <div class="side-stat">Magic: 5</div>
+            </div>
+            <button
+              class="action-button"
+              type="button"
+              aria-label="Primary Action"
+            ></button>
+          </div>
         </div>
         <!-- Panel moved to here, as a sibling of character-wrap -->
         <div class="character-bottom-panel">
@@ -1166,6 +1199,7 @@
     </script>
   </body>
 </html>
+
 
 
 
