--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         transform: translateX(-50%);
         width: 80%;
         height: 18px;
-        background-color: rgba(0, 0, 0, 0.35); /* MODIFIED: Was 0.5 */
+        background-color: rgba(0, 0, 0, 0.5); /* MODIFIED: Was 0.35 */
         border-radius: 999px;
         border: 1px solid rgba(255, 255, 255, 0.2);
         overflow: hidden;
@@ -389,9 +389,9 @@
         width: 100%; /* Default to full */
         background: linear-gradient(
           to right,
-          #22c55e, /* Green */
-          #ef4444 /* Red */
-        ); /* UPDATED: Was red transparent gradient */
+          rgba(239, 68, 68, 0.7), /* Red, semi-transparent */
+          rgba(34, 197, 94, 0.7) /* Green, semi-transparent */
+        ); /* UPDATED: Red-to-green gradient and semi-transparent */
         border-radius: 999px;
         transition: width 0.3s ease-out;
       }
@@ -445,7 +445,11 @@
       .slim-meter-blue-fill {
         height: 100%;
         width: 100%; /* MODIFIED: Was 70% */
-        background: linear-gradient(to right, #3b82f6, #1d4ed8); /* Blue gradient */
+        background: linear-gradient(
+          to right,
+          #1e3a8a,
+          #4b5563
+        ); /* UPDATED: Dark blue to dark gray gradient */
         border-radius: 999px;
         transition: width 0.3s ease-out; /* ADDED transition */
       }
@@ -521,11 +525,7 @@
         height: 48px;
         flex-shrink: 0;
         border-radius: 10px; /* MODIFIED: Was 999px (round) */
-        background: radial-gradient(
-          circle at 30% 30%,
-          #7e22ce, /* MODIFIED: Was #a855f7 */
-          #3b0764 95% /* MODIFIED: Was #581c87 */
-        ); /* MUCH Darker Purple Gradient */
+        background: #000; /* UPDATED: Was purple gradient */
         border: 1px solid rgba(255, 255, 255, 0.3);
         box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
         transition: transform 0.05s ease, box-shadow 0.05s ease; /* Same animation timing */
@@ -1177,4 +1177,5 @@
     </script>
   </body>
 </html>
+
 
